--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +21,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "reactstrap": "^9.2.2",
     "swiper": "^11.1.9",
     "web-vitals": "^2.1.4"
